--- a/src/components/Auth/AuthForm.module.css
+++ b/src/components/Auth/AuthForm.module.css
@@ -70,3 +70,11 @@
   background-color: transparent;
   color: #ae82cc;
 }
+
+button:disabled,
+button:disabled:hover {
+  cursor: not-allowed;
+  background-color: #dbdbdb;
+  color: #38015c;
+  border: 0;
+}
